--- a/admin.html
+++ b/admin.html
@@ -13,23 +13,22 @@
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 20px; color: var(--text-main); }
         #auth-overlay { position: fixed; inset: 0; background: var(--bg); z-index: 5000; display: flex; align-items: center; justify-content: center; }
         .login-card { background: var(--card-bg); padding: 30px; border-radius: 24px; width: 100%; max-width: 350px; text-align: center; border: 1px solid var(--border); }
-        .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 15px; outline: none; box-sizing: border-box; font-family: inherit; }
-        .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; overflow-x: auto; padding-bottom: 10px; }
+        .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 15px; outline: none; box-sizing: border-box; }
+        .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; overflow-x: auto; }
         .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: var(--card-bg); color: var(--text-sub); border: 1px solid var(--border); transition: 0.3s; white-space: nowrap; }
         .tab-btn.active { background: var(--blue); color: white; border-color: var(--blue); }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 25px; border: 1px solid var(--border); margin-bottom: 20px; }
-        table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+        table { width: 100%; border-collapse: collapse; }
         th { text-align: left; padding: 12px; color: var(--text-sub); font-size: 11px; text-transform: uppercase; border-bottom: 1px solid var(--border); }
         td { padding: 15px 12px; border-bottom: 1px solid var(--border); font-size: 13px; }
-        .btn-sm { padding: 8px 15px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; }
-        .dropdown-menu { display: none; position: absolute; background: var(--card-bg); border: 1px solid var(--border); border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.5); z-index: 100; min-width: 180px; padding: 10px; top: 40px; }
-        .show { display: block; }
-        .dropdown-item { padding: 8px 12px; cursor: pointer; border-radius: 6px; font-size: 12px; color: var(--text-main); }
-        .hidden { display: none !important; }
-        .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 20px; }
+        .user-folder { background: #0f172a; padding: 15px; border-radius: 12px; margin-bottom: 10px; cursor: pointer; border: 1px solid var(--border); display: flex; justify-content: space-between; }
+        .stat-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; margin-bottom: 20px; }
         .stat-box { background: #0f172a; padding: 15px; border-radius: 12px; text-align: center; border: 1px solid var(--border); }
         .stat-val { font-size: 18px; font-weight: 800; color: var(--blue); display: block; }
-        .stat-lbl { font-size: 10px; color: var(--text-sub); text-transform: uppercase; }
+        #user-modal { position: fixed; inset: 0; background: rgba(0,0,0,0.85); z-index: 6000; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(10px); }
+        .modal-content { background: var(--card-bg); width: 100%; max-width: 650px; border-radius: 24px; padding: 30px; max-height: 90vh; overflow-y: auto; border: 1px solid var(--border); }
+        .hidden { display: none !important; }
+        .btn-sm { padding: 8px 15px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; }
     </style>
 </head>
 <body>
@@ -40,7 +39,7 @@
         <input type="text" id="admin-coll-id" class="login-field" placeholder="College ID">
         <input type="password" id="admin-pass" class="login-field" placeholder="Password">
         <button class="btn-sm" style="background:var(--blue); color:white; width:100%; padding:15px; border-radius:12px;" onclick="handleAdminLogin()">Login</button>
-        <p id="admin-status" style="color:#ef4444; font-size:11px; margin-top:10px; font-weight:600;"></p>
+        <p id="admin-status" style="color:#ef4444; font-size:11px; margin-top:10px;"></p>
     </div>
 </div>
 
@@ -54,56 +53,56 @@
     </div>
 
     <div id="inv-section" class="glass-card">
-        <div id="super-admin-reg" class="hidden" style="margin-bottom: 25px; border-bottom: 1px solid var(--border); padding-bottom: 20px;">
-            <h3 style="margin:0 0 15px; color:var(--blue);">🔗 Register GitHub PDF</h3>
-            <div style="display:flex; gap:10px;">
-                <input type="text" id="reg-file-id" class="login-field" placeholder="File ID (Exact name)">
-                <input type="text" id="reg-file-title" class="login-field" placeholder="Display Title">
-                <button class="btn-sm" style="background:var(--blue); color:white; height:45px;" onclick="registerBook()">Register</button>
-            </div>
+        <h2 style="margin-top:0;">📂 Global Inventory</h2>
+        <tbody id="inventory-list"></tbody>
         </div>
-        <table><thead><tr><th>Resource</th><th>Access</th><th>Manage</th><th>Actions</th></tr></thead><tbody id="inventory-list"></tbody></table>
-    </div>
-
-    <div id="rec-section" class="hidden glass-card">
-        <h2 style="margin-top:0;">⭐ Faculty Recommendations</h2>
-        <div style="max-width:400px; display:grid; gap:15px;">
-            <select id="rec-coll" class="login-field" onchange="fetchFaculty(this.value)">
-                <option value="">1. Select College</option>
-                <option value="IMC26">IMC26</option>
-                <option value="ASLIN26">ASLIN26</option>
-            </select>
-            <select id="rec-faculty" class="login-field"><option value="">2. Choose Faculty</option></select>
-            <select id="rec-book" class="login-field"><option value="">3. Select Book</option></select>
-            <button class="btn-sm" style="background:var(--orange); color:white; padding:15px;" onclick="saveRecommendation()">Set Recommendation Live</button>
-        </div>
-    </div>
-
-    <div id="stud-section" class="hidden glass-card">
-        <h2>📤 Member Registration</h2>
-        <textarea id="bulk-input" class="login-field" style="height:150px;" placeholder="Name, CollegeID, ID, Password, Role(student/faculty)"></textarea>
-        <button class="btn-sm" style="background:var(--blue); color:white; width:100%; padding:15px;" onclick="processBulk()">Register Members</button>
-    </div>
 
     <div id="mem-section" class="hidden glass-card">
-        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
-            <h2 style="margin:0;">👥 Monitoring</h2>
-            <select id="super-admin-college-select" onchange="loadCollegeStudents(this.value)" class="login-field" style="max-width:200px; margin:0;">
-                <option value="">Choose College</option>
-                <option value="IMC26">IMC26</option>
-                <option value="ASLIN26">ASLIN26</option>
-            </select>
-        </div>
+        <h2>👥 Monitoring</h2>
+        <select id="mon-coll" onchange="loadCollegeStudents(this.value)" class="login-field" style="max-width:250px;">
+            <option value="">Select College</option>
+            <option value="IMC26">IMC26</option>
+            <option value="ASLIN26">ASLIN26</option>
+        </select>
         <div id="user-folders-list"></div>
+    </div>
+    
+    </div>
+
+<div id="user-modal" class="hidden">
+    <div class="modal-content">
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+            <h3 id="modal-title">Report</h3>
+            <div style="display:flex; gap:10px;">
+                <button onclick="downloadReport()" class="btn-sm" style="background:var(--blue); color:white;">Export CSV</button>
+                <button onclick="document.getElementById('user-modal').classList.add('hidden')" class="btn-sm" style="background:#ef4444; color:white;">Close</button>
+            </div>
+        </div>
+
+        <div id="modal-body"></div>
+
+        <div style="margin-top:20px; padding:15px; background:#0f172a; border-radius:12px; border:1px solid var(--border);">
+            <label style="font-size:11px; color:var(--text-sub);">CHANGE POSITION / ROLE</label>
+            <div style="display:flex; gap:10px; margin-top:10px;">
+                <select id="role-select" class="login-field" style="margin:0;">
+                    <option value="student">Student</option>
+                    <option value="faculty">Faculty</option>
+                </select>
+                <button onclick="updateUserRole()" class="btn-sm" style="background:var(--green); color:white;">Update Role</button>
+            </div>
+        </div>
+
+        <h4 style="margin-top:25px; border-top:1px solid var(--border); padding-top:15px;">Detailed Logs</h4>
+        <table><thead><tr><th>Date</th><th>Activity</th><th>Duration</th></tr></thead><tbody id="log-body"></tbody></table>
     </div>
 </div>
 
 <script>
-    const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
+    const firebaseConfig = { ... }; // Your config
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
     const adminAccounts = { "IMC26": "IMC26@theo", "ASLIN26": "ASL@theo", "aslin": "Phlagon@28" };
-    let currentAdminID = ""; let isSuperAdmin = false;
+    let currentAdminID = ""; let isSuperAdmin = false; let activeUserUID = ""; let reportData = null;
 
     function handleAdminLogin() {
         const cid = document.getElementById('admin-coll-id').value;
@@ -112,76 +111,76 @@
             currentAdminID = cid; isSuperAdmin = (cid === "aslin");
             document.getElementById('auth-overlay').classList.add('hidden');
             document.getElementById('master-panel').classList.remove('hidden');
-            if(isSuperAdmin) document.getElementById('super-admin-reg').classList.remove('hidden');
             initAdmin();
-        } else { document.getElementById('admin-status').innerText = "Access Denied"; }
-    }
-
-    function initAdmin() {
-        db.collection("library_settings").onSnapshot(snap => {
-            const list = document.getElementById('inventory-list'); list.innerHTML = "";
-            snap.forEach(doc => {
-                const b = doc.data(); const id = doc.id; const allowed = b.allowedColleges || [];
-                list.innerHTML += `<tr><td><b>${b.title}</b><br><small>${b.category}</small></td>
-                    <td><small>${allowed.join(', ') || '🔒'}</small></td>
-                    <td style="position:relative;">
-                        ${isSuperAdmin ? `<button class="btn-sm" style="background:var(--purple); color:white;" onclick="toggleM('a-${id}')">🔓 Access</button>` : ''}
-                        <div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','${c}',${allowed.includes(c)})">${c} ${allowed.includes(c)?'✅':''}</div>`).join('')}</div>
-                        <button class="btn-sm" style="background:var(--green); color:white;" onclick="toggleM('c-${id}')">📁 Category</button>
-                        <div id="c-${id}" class="dropdown-menu">${["Theology", "History", "Mission", "Acts", "Gospel", "Bible"].map(c => `<div class="dropdown-item" onclick="updateField('${id}','category','${c}')">${c}</div>`).join('')}</div>
-                    </td><td>${isSuperAdmin ? `<button class="btn-sm" style="background:#ef4444; color:white;" onclick="deletePDF('${id}')">🗑️</button>` : '-'}</td></tr>`;
-            });
-        });
-    }
-
-    async function registerBook() {
-        const id = document.getElementById('reg-file-id').value.trim();
-        const title = document.getElementById('reg-file-title').value.trim();
-        if(!id || !title) return;
-        await db.collection("library_settings").doc(id).set({ title, category: "Theology", allowedColleges: [], recent: false, trending: false, updatedAt: new Date().toISOString() });
-        alert("Registered!");
-    }
-
-    async function fetchFaculty(cid) {
-        if(!cid) return;
-        const fSnap = await db.collection("users").where("collegeId","==",cid).where("role","==","faculty").get();
-        const fSel = document.getElementById('rec-faculty'); fSel.innerHTML = '<option value="">Choose Faculty</option>';
-        fSnap.forEach(doc => fSel.innerHTML += `<option value="${doc.data().fullName}">${doc.data().fullName}</option>`);
-        const bSnap = await db.collection("library_settings").get();
-        const bSel = document.getElementById('rec-book'); bSel.innerHTML = '<option value="">Select Book</option>';
-        bSnap.forEach(doc => bSel.innerHTML += `<option value="${doc.id}">${doc.data().title}</option>`);
-    }
-
-    async function saveRecommendation() {
-        const cid = document.getElementById('rec-coll').value;
-        const faculty = document.getElementById('rec-faculty').value;
-        const bookId = document.getElementById('rec-book').value;
-        await db.collection("library_settings").doc(bookId).set({ recommendations: { [cid]: faculty } }, { merge: true });
-        alert("Recommendation Added!");
-    }
-
-    async function processBulk() {
-        const lines = document.getElementById('bulk-input').value.split('\n');
-        for(let l of lines) {
-            const p = l.split(',').map(i=>i.trim());
-            if(p.length===5) await db.collection("users").add({ fullName: p[0], collegeId: p[1], studentId: p[2], password: p[3], role: p[4].toLowerCase(), createdAt: new Date().toISOString() });
         }
-        alert("Bulk Upload Complete");
     }
 
     function loadCollegeStudents(cid) {
         if(!cid) return;
         db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => {
             const list = document.getElementById('user-folders-list'); list.innerHTML = "";
-            snap.forEach(doc => list.innerHTML += `<div style="background:#0f172a; padding:12px; margin-bottom:8px; border-radius:10px; border:1px solid var(--border);">📂 <b>${doc.data().fullName}</b> (${doc.data().role})</div>`);
+            snap.forEach(doc => {
+                const u = doc.data();
+                list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}", ${JSON.stringify(u)})'>
+                    <span>📂 <b>${u.fullName}</b></span>
+                    <small style="color:var(--blue)">${u.role || 'Unset'}</small>
+                </div>`;
+            });
         });
     }
 
-    function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
-    function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === `t-${t}`)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== `${t}-section`)); }
-    async function toggleAccess(id, coll, has) { const ref = db.collection("library_settings").doc(id); const doc = await ref.get(); let allowed = doc.data().allowedColleges || []; allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll]; await ref.update({ allowedColleges: allowed }); }
-    async function updateField(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
-    async function deletePDF(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
+    async function openReport(uid, user) {
+        activeUserUID = uid;
+        document.getElementById('user-modal').classList.remove('hidden');
+        document.getElementById('modal-title').innerText = user.fullName;
+        document.getElementById('role-select').value = user.role || "student";
+
+        const logs = await db.collection("activity_logs").where("userId", "==", uid).orderBy("timestamp", "desc").get();
+        reportData = { user, logs: [] };
+        let totalSecs = 0; let logHtml = "";
+        
+        logs.forEach(l => {
+            const d = l.data();
+            const durString = d.duration || "0s";
+            totalSecs += parseInt(durString);
+            logHtml += `<tr><td>${new Date(d.timestamp).toLocaleDateString()}</td><td>${d.activityType}</td><td>${durString}</td></tr>`;
+            reportData.logs.push(d);
+        });
+
+        const fmt = (s) => {
+            const h = Math.floor(s / 3600);
+            const m = Math.floor((s % 3600) / 60);
+            return `${h}h ${m}m ${s % 60}s`;
+        };
+
+        document.getElementById('modal-body').innerHTML = `
+            <div class="stat-grid">
+                <div class="stat-box"><span style="font-size:10px; color:var(--text-sub);">TOTAL TIME</span><span class="stat-val">${fmt(totalSecs)}</span></div>
+                <div class="stat-box"><span style="font-size:10px; color:var(--text-sub);">ID</span><span class="stat-val" style="font-size:14px;">${user.studentId}</span></div>
+            </div>`;
+        document.getElementById('log-body').innerHTML = logHtml;
+    }
+
+    async function updateUserRole() {
+        const newRole = document.getElementById('role-select').value;
+        await db.collection("users").doc(activeUserUID).update({ role: newRole });
+        alert("Role updated to " + newRole);
+    }
+
+    function downloadReport() {
+        if(!reportData) return;
+        let csv = "Date,Activity,Duration\n";
+        reportData.logs.forEach(l => csv += `${new Date(l.timestamp).toLocaleString()},"${l.activityType}",${l.duration}\n`);
+        const link = document.createElement("a");
+        link.href = URL.createObjectURL(new Blob([csv], {type:'text/csv'}));
+        link.download = `Report_${reportData.user.fullName}.csv`;
+        link.click();
+    }
+
+    function switchTab(t) { 
+        document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === `t-${t}`)); 
+        document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== `${t}-section`)); 
+    }
 </script>
 </body>
 </html>
